--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "express-validator": "^3.2.0",
+    "nodemon": "^1.11.0",
     "uuid": "^3.1.0"
   }
 }
