--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "mongod --dbpath db & sleep 10 && nodemon server.js"
+    "start": "mongod --dbpath db & sleep 10 && nodemon server.js",
+    "build": "./node_modules/.bin/webpack"
   },
   "author": "",
   "license": "ISC",
@@ -13,8 +14,25 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.15.3",
     "express-validator": "^3.2.0",
+    "material-ui": "^0.18.3",
     "mongoose": "^4.10.7",
     "nodemon": "^1.11.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-tap-event-plugin": "^2.0.1",
     "uuid": "^3.1.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "css-loader": "^0.28.4",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "webpack": "^3.0.0",
+    "webpack-dev-server": "^2.5.0"
   }
 }
