--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "mongod --dbpath db & sleep 10 && nodemon server.js",
-    "build": "./node_modules/.bin/webpack"
+    "start": "mongod --dbpath db & sleep 10 && nodemon server.js & webpack-dev-server",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.3",
     "express": "^4.15.3",
     "express-validator": "^3.2.0",
     "material-ui": "^0.18.3",
